--- a/Web/Estilos/web.css
+++ b/Web/Estilos/web.css
@@ -78,13 +78,17 @@ main div div img {
   display: flex;
   flex-direction: row;
   background-color: rgb(233, 249, 253);
+  width: 100%;
 }
 p.nombres {
+  color: rgb(0, 17, 101);
   font-weight: bold;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 p.cargo {
-  
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 11.5px;
+  color: rgb(67, 66, 66);
 }
 img.personal {
   width: 200px;
@@ -139,170 +143,3 @@ footer > div > ul > li {
   font-size: 13px;
   color: whitesmoke;
 }
-
-/*La página debe ser responsiva y diseñarse para al menos 3 tamaños de dispositivos, empleando media queries.
-
-
-@media (min-width: 1201px) {
-  #datos {
-    float: left;
-    width: 30%;
-  }
-  #curriculum {
-    float: left;
-    width: 70%;
-  }
-  #formacion {
-    float: left;
-    width: 50%;
-  }
-  #experiencia {
-    float: left;
-    width: 50%;
-  }
-}
-
-
-@media (min-width: 601px) and (max-width: 1200px) {
-  #datos {
-    float: left;
-    width: 30%;
-  }
-  #curriculum {
-    float: left;
-    width: 70%;
-  }
-  #formacion {
-    float: left;
-    width: 50%;
-  }
-  #experiencia {
-    float: unset;
-    width: 50%;
-  }
-}
-
-
-@media (max-width: 600px) {
-}
- */
-
-/* * {
-  padding: 1%;
-  border-style: solid;
-  border-color: darkblue;
-  border-width: 2px;
-}
-
-body {
-  background-color: aliceblue;
-}
-
-nav {
-  text-align: center;
-  background-color: rgb(250, 243, 240);
-  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
-}
-nav > ul {
-}
-nav > ul > li {
-  border-radius: 15%;
-  list-style-type: none;
-  display: inline-flex;
-  flex-direction: row;
-  justify-content: center;
-  background-color: white;
-}
-
-main {
-  display: flex;
-  border-color: pink;
-  border-style: solid;
-  border-width: 2px;
-}
-#principal {
-  width: 400px;
-  background-color: blanchedalmond;
-  align-content: flex-start;
-  flex-direction: column;
-}
-#inicio {
-  background-color: gainsboro;
-}
-
-#equipo {
-  background-color: rgb(221, 255, 251);
-}
-
-#servicios {
-  background-color: rgb(212, 229, 243);
-  width: 300px;
-}
-
-footer {
-  display: flex;
-  height: 350px;
-  text-align: center;
-  background-color: rgb(60, 60, 114);
-  color: white;
-  line-height: 1pc;
-  font-style: italic;
-  font-family: "Times New Roman", Times, serif;
-}
-
-footer > img {
-  height: 300px;
-  width: 180px;
-  border-radius: 5%;
-}
-
-footer > div > ul > li {
-  justify-content: right;
-  list-style-type: none;
-  font-size: 13px;
-  color: whitesmoke;
-}
-
-/*La página debe ser responsiva y diseñarse para al menos 3 tamaños de dispositivos, empleando media queries.
-
-@media (min-width: 1201px) {
-  #datos {
-    float: left;
-    width: 30%;
-  }
-  #curriculum {
-    float: left;
-    width: 70%;
-  }
-  #formacion {
-    float: left;
-    width: 50%;
-  }
-  #experiencia {
-    float: left;
-    width: 50%;
-  }
-}
-
-@media (min-width: 601px) and (max-width: 1200px) {
-  #datos {
-    float: left;
-    width: 30%;
-  }
-  #curriculum {
-    float: left;
-    width: 70%;
-  }
-  #formacion {
-    float: left;
-    width: 50%;
-  }
-  #experiencia {
-    float: unset;
-    width: 50%;
-  }
-}
-
-@media (max-width: 600px) {
-}
- */
